# fastcampus-ai-pair-programming

./: README.md
P03_CH01_01_data_generation/: README.md  elem_math.py
P03_CH01_02_DB_schema_sql/: README.md
P03_CH01_03_chrome_extension/: README.md  manifest.json  popup.html  popup.js  styles.css
P03_CH02_01_bug_fix/: README.md
P03_CH02_01_bug_fix/exception/: exception_fix.py
P03_CH02_01_bug_fix/lint/: lint_error.js
P03_CH02_01_bug_fix/syntax/: syntax_error.py
P03_CH03_01_extract/: README.md  process_user_info.py
P03_CH03_02_time_complexity/: README.md
P03_CH03_03_design_pattern/: README.md  document_editor.py
P03_CH06_01_code_review/: README.md
P03_CH06_02_data_structure_algorithm/: median-of-two-sorted-arrays.py
P04_CH04_BE/: .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml  start.sh  test.sh
P04_CH04_BE/app/: main.py
P04_CH04_BE/app/api/: deps.py
P04_CH04_BE/app/api/v1/: router.py
P04_CH04_BE/app/api/v1/endpoints/: chat.py  products.py
P04_CH04_BE/app/core/: config.py
P04_CH04_BE/app/crud/: __init__.py  crud_product.py
P04_CH04_BE/app/db/: models.py  session.py
P04_CH04_BE/app/schemas/: __init__.py  product.py
P04_CH04_BE/tests/: conftest.py  test_main.py  test_products.py
P04_CH04_FE/: README.md  jest.config.js  package-lock.json  package.json  setupTests.js
P04_CH04_FE/app/: page.test.js  page.tsx
P04_CH04_FE/app/chat/: page.tsx
P04_CH04_FE/app/products/: page.tsx
P04_CH04_FE/components/: cs-chat.tsx  product-list.tsx
